# mediaplayer

./: Cargo.toml  config.toml  mydb.sqlite3  target.txt  temp_screenshot.rs  ting.txt
backup/: mainbackup.rs
src/: app.rs  app.rs.backup2  app_types.rs  config.rs  database.rs  defsub.ass  main.rs  mydb.sqlite3  problem.txt  simple.srt  subtitles.rs  ui.rs  ui_working.rs
