[package]
name = "iced-video-crate"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["system"] }

url = "2.0"

rfd = "0.14"

iced_video_player = {git = "https://github.com/jazzfool/iced_video_player.git", branch="master"}
ass_parser = {git = "https://github.com/koushik255/ass_parserfork" ,branch = "main"}
srt = "0.1.0"
lib = "0.0.1"
srtlib = "0.2.0"
tokio = { version = "1.47.1", features = ["sync", "time"] }

full = "0.3.0"
rusqlite = "0.37.0"
fs = "0.0.5"
io = "0.0.2"
iced_aw ={ version = "0.12.0", features = ["glow"] }



