[package]
name = "iced-video-crate"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 1

[features]
dhat-heap = []


[dependencies]
iced = { version = "0.14", features = ["image", "advanced", "wgpu"] }

url = "2.0"
percent-encoding = "2.3"

rfd = "0.14"

#iced_video_player = {git = "https://github.com/jazzfool/iced_video_player.git", branch="master"}
iced_video_player = {git = "https://github.com/koushik255/iced_video_playeryeap.git", brance = "master"}
ass_parser = {git = "https://github.com/koushik255/ass_parserfork" ,branch = "main"}
srt = "0.1.0"
lib = "0.0.1"
srtlib = "0.2.0"
tokio = { version = "1.47.1", features = ["sync", "time"] }

gstreamer = "0.23"
gstreamer-app = "0.23"

full = "0.3.0"
rusqlite = "0.37.0"
fs = "0.0.5"
io = "0.0.2"
iced_aw ={ version = "0.13", features = ["menu"] }
dhat = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"



